--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
   <title></title>
 </head>
 <body>
+  <div id="root"></div>
   <div id="app"></div>
   <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
