--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script> -->
-  <title></title>
+  <title>PLATONOTES</title>
+  <link rel="icon" type="image/gif" href="./platonotes.png" />
 </head>
 <body>
   <div id="app"></div>
