--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title></title>
+  <title>PLATONOTES</title>
+  <link rel="icon" type="image/gif" href="./platonotes.png" />
 </head>
 <body>
   <div id="app"></div>
