Refactor editor and oauth

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script> -->
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/medium-draft/dist/medium-draft.css">
+  <script src="https://unpkg.com/medium-draft/dist/medium-draft.js"></script>
   <title>PLATONOTES</title>
   <link rel="icon" type="image/gif" href="./platonotes.png" />
 </head>
