--- a/client/index.html
+++ b/client/index.html
@@ -16,5 +16,11 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
   <script type="text/javascript" src="./public/bundle.js" charset="utf-8"></script>
+  <script>
+    $(document).ready(() => {
+       $('.parallax').parallax();
+     });
+    
+  </script>
 </body>
 </html>
