--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/gif" href="./platonotes.png" />
 </head>
 <body>
+  <header></header>
   <div id="app"></div>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
