--- a/client/index.html
+++ b/client/index.html
@@ -12,16 +12,27 @@
   <link rel="icon" type="image/gif" href="./platonotes.png" />
 </head>
 <body>
+<script>
+  // $(document).ready(() => {
+  //    $('.parallax').parallax();
+  //  });
+  function toggleVisibility(name) {
+    console.log(name, 'name');
+    const e = document.getElementById(name);
+    console.log(e, 'e');
+    // const arr = e.toArray();
+    // console.log(arr, 'arr');
+    if (e.style.display !== 'none') {
+      e.style.display = 'none';
+    } else {
+      e.style.display = 'block';
+    }
+  }
+</script>
   <header></header>
   <div id="app"></div>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
   <script type="text/javascript" src="./public/bundle.js" charset="utf-8"></script>
-  <script>
-    $(document).ready(() => {
-       $('.parallax').parallax();
-     });
-    
-  </script>
 </body>
 </html>
